This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
9/24/21: Fixed crash if start to exit during a dose-symmetric series and
choose to reorder file instead (In 3.8).

9/24/21: Added option to the Focus by Eucentricity dialog to use a View
subarea for the focus measurements.

9/22/21: SEM_3-8-15
9/22/21: Fixed crash using hole finder on non-montage (broken 8/23) (In 3.8).

9/21/21: Allowed relative focus to be set with objective minilens in LM on
JEOL, so scope control, focus calibration, and autofocusing can work in LM.

9/21/21: Stopped brief unblanking before exposure with NoShutter 2.

9/16/21: Retry opening an mdoc file for writing to try to dodge file locks
from automated copying operations.

9/16/21: Added dose rate table for Falcon 4 at 200 kV.

9/12/21: Added option to multi-hole combiner to turn off and not acquire
points outside a polygon when selecting points inside.

9/12/21: Prevented trimming in autoalignment to the template in Align to
Template.

9/10/21: Fixed rotations of multishot patterns produced by the combiner when
working with montage-based image coordinates, broken 8/23.

9/9/21: SEM_3-8-14
9/9/21: Stopped displaying full multishot pattern on the current point if some
positions are being skipped for it (In 3.8).

9/9/21: Fixed crash reordering dose-symmetric file when running from Navigator
(In 3.8). 

9/9/21: Stopped trying to ensure a dark reference in beam calibration routine
with OneView/Rio cameras (In 3.8).

9/7/21: Fixed crash when loading settings with Low Dose turned on but no area
selected.

9/7/21: Made header title line show "dosym" instead of "bidir" for
dose-symmetric series (In 3.8).

9/5/21: Fixed 27 settings not being saved, broken 8/4/21.
