@@ -611,6 +611,9 @@ MAC_SAME_NAME_NOARG(SimpleOriginStatus, 0, 4, SIMPLEORIGINSTATUS)
 MAC_SAME_NAME_ARG(AlignToTemplate, 0, 0, ALIGNTOTEMPLATE, ddiis)
 MAC_SAME_NAME_ARG(ManageDewarsAndPumps, 0, 0, MANAGEDEWARSANDPUMPS, i)
 MAC_SAME_NAME_ARG(ImageMetadataToVar, 2, 4, IMAGEMETADATATOVAR, SS)
+MAC_SAME_NAME_NOARG(ReportHoleFinderParams, 0, 4, REPORTHOLEFINDERPARAMS)
+MAC_SAME_NAME_NOARG(ReportDiffractionShift, 0, 0, REPORTDIFFRACTIONSHIFT)
+MAC_SAME_NAME_ARG(SetDiffractionShift, 2, 0, SETDIFFRACTIONSHIFT, DD)
 
 // new Python-only commands need to be added to pythonOnlyCmds in ::CMacroProcessor
 //
