@@ -3,6 +3,10 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+9/24/21: Added script command to get hoe finder diameter and spacing.
+
+9/24/21: Added script commands to report and set diffraction shift.
+
 9/24/21: Fixed crash if start to exit during a dose-symmetric series and
 choose to reorder file instead (In 3.8).
 
